games/chess/src/presentation/snapshots/tabula_game_chess__presentation__tests__chess_move_animation_midflight.snap
---
source: games/chess/src/presentation/mod.rs
assertion_line: 3837
expression: "& $crate :: presentation ::\nrender_list_snapshot($crate :: presentation :: AsRenderList ::\nas_render_list(& list))"
---
camera origin=(0.000, 0.000) zoom=1.000
commands (total 140):
  0: rect [origin=(0.000, 0.000) size=(640.000, 640.000)] radii=uniform(0.000) fill=solid(#f5f0e6ff) border=none layer=board(0) z=-10
  1: rect [origin=(149.360, 56.960) size=(341.280, 446.240)] radii=uniform(16.000) fill=solid(#153f44ff) border=none layer=board(0) z=-10
  2: rect [origin=(165.360, 396.060) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=0
  3: rect [origin=(204.020, 396.060) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=1
  4: rect [origin=(242.680, 396.060) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=2
  5: rect [origin=(281.340, 396.060) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=3
  6: rect [origin=(320.000, 396.060) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=4
  7: rect [origin=(358.660, 396.060) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=5
  8: rect [origin=(397.320, 396.060) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=6
  9: rect [origin=(435.980, 396.060) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=7
  10: rect [origin=(165.360, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=8
  11: rect [origin=(204.020, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=9
  12: rect [origin=(242.680, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=10
  13: rect [origin=(281.340, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=11
  14: rect [origin=(320.000, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=12
  15: rect [origin=(358.660, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=13
  16: rect [origin=(397.320, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=14
  17: rect [origin=(435.980, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=15
  18: rect [origin=(165.360, 318.740) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=16
  19: rect [origin=(204.020, 318.740) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=17
  20: rect [origin=(242.680, 318.740) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=18
  21: rect [origin=(281.340, 318.740) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=19
  22: rect [origin=(320.000, 318.740) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=20
  23: rect [origin=(358.660, 318.740) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=21
  24: rect [origin=(397.320, 318.740) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=22
  25: rect [origin=(435.980, 318.740) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=23
  26: rect [origin=(165.360, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=24
  27: rect [origin=(204.020, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=25
  28: rect [origin=(242.680, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=26
  29: rect [origin=(281.340, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=27
  30: rect [origin=(320.000, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=28
  31: rect [origin=(358.660, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=29
  32: rect [origin=(397.320, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=30
  33: rect [origin=(435.980, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=31
  34: rect [origin=(165.360, 241.420) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=32
  35: rect [origin=(204.020, 241.420) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=33
  36: rect [origin=(242.680, 241.420) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=34
  37: rect [origin=(281.340, 241.420) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=35
  38: rect [origin=(320.000, 241.420) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=36
  39: rect [origin=(358.660, 241.420) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=37
  40: rect [origin=(397.320, 241.420) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=38
  41: rect [origin=(435.980, 241.420) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=39
  42: rect [origin=(165.360, 202.760) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=40
  43: rect [origin=(204.020, 202.760) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=41
  44: rect [origin=(242.680, 202.760) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=42
  45: rect [origin=(281.340, 202.760) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=43
  46: rect [origin=(320.000, 202.760) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=44
  47: rect [origin=(358.660, 202.760) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=45
  48: rect [origin=(397.320, 202.760) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=46
  49: rect [origin=(435.980, 202.760) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=47
  50: rect [origin=(165.360, 164.100) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=48
  51: rect [origin=(204.020, 164.100) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=49
  52: rect [origin=(242.680, 164.100) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=50
  53: rect [origin=(281.340, 164.100) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=51
  54: rect [origin=(320.000, 164.100) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=52
  55: rect [origin=(358.660, 164.100) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=53
  56: rect [origin=(397.320, 164.100) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=54
  57: rect [origin=(435.980, 164.100) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=55
  58: rect [origin=(165.360, 125.440) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=56
  59: rect [origin=(204.020, 125.440) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=57
  60: rect [origin=(242.680, 125.440) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=58
  61: rect [origin=(281.340, 125.440) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=59
  62: rect [origin=(320.000, 125.440) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=60
  63: rect [origin=(358.660, 125.440) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=61
  64: rect [origin=(397.320, 125.440) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#ece4d3ff) border=none layer=board(0) z=62
  65: rect [origin=(435.980, 125.440) size=(38.660, 38.660)] radii=uniform(0.000) fill=solid(#5d8a80ff) border=none layer=board(0) z=63
  66: sprite asset="pieces/white-rook" rect=[origin=(165.940, 396.640) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(184.690, 415.390) layer=pieces(10) z=0
  67: sprite asset="pieces/white-knight" rect=[origin=(204.600, 396.640) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(223.350, 415.390) layer=pieces(10) z=1
  68: sprite asset="pieces/white-bishop" rect=[origin=(243.260, 396.640) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(262.010, 415.390) layer=pieces(10) z=2
  69: sprite asset="pieces/white-queen" rect=[origin=(281.920, 396.640) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(300.670, 415.390) layer=pieces(10) z=3
  70: sprite asset="pieces/white-king" rect=[origin=(320.580, 396.640) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(339.330, 415.390) layer=pieces(10) z=4
  71: sprite asset="pieces/white-bishop" rect=[origin=(359.240, 396.640) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(377.990, 415.390) layer=pieces(10) z=5
  72: sprite asset="pieces/white-knight" rect=[origin=(397.900, 396.640) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(416.650, 415.390) layer=pieces(10) z=6
  73: sprite asset="pieces/white-rook" rect=[origin=(436.560, 396.640) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(455.310, 415.390) layer=pieces(10) z=7
  74: sprite asset="pieces/white-pawn" rect=[origin=(165.940, 357.980) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(184.690, 376.730) layer=pieces(10) z=8
  75: sprite asset="pieces/white-pawn" rect=[origin=(204.600, 357.980) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(223.350, 376.730) layer=pieces(10) z=9
  76: sprite asset="pieces/white-pawn" rect=[origin=(243.260, 357.980) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(262.010, 376.730) layer=pieces(10) z=10
  77: sprite asset="pieces/white-pawn" rect=[origin=(281.920, 357.980) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(300.670, 376.730) layer=pieces(10) z=11
  78: sprite asset="pieces/white-pawn" rect=[origin=(359.240, 357.980) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(377.990, 376.730) layer=pieces(10) z=13
  79: sprite asset="pieces/white-pawn" rect=[origin=(397.900, 357.980) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(416.650, 376.730) layer=pieces(10) z=14
  80: sprite asset="pieces/white-pawn" rect=[origin=(436.560, 357.980) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(455.310, 376.730) layer=pieces(10) z=15
  81: sprite asset="pieces/black-pawn" rect=[origin=(165.940, 164.680) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(184.690, 183.430) layer=pieces(10) z=48
  82: sprite asset="pieces/black-pawn" rect=[origin=(204.600, 164.680) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(223.350, 183.430) layer=pieces(10) z=49
  83: sprite asset="pieces/black-pawn" rect=[origin=(243.260, 164.680) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(262.010, 183.430) layer=pieces(10) z=50
  84: sprite asset="pieces/black-pawn" rect=[origin=(281.920, 164.680) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(300.670, 183.430) layer=pieces(10) z=51
  85: sprite asset="pieces/black-pawn" rect=[origin=(320.580, 164.680) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(339.330, 183.430) layer=pieces(10) z=52
  86: sprite asset="pieces/black-pawn" rect=[origin=(359.240, 164.680) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(377.990, 183.430) layer=pieces(10) z=53
  87: sprite asset="pieces/black-pawn" rect=[origin=(397.900, 164.680) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(416.650, 183.430) layer=pieces(10) z=54
  88: sprite asset="pieces/black-pawn" rect=[origin=(436.560, 164.680) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(455.310, 183.430) layer=pieces(10) z=55
  89: sprite asset="pieces/black-rook" rect=[origin=(165.940, 126.020) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(184.690, 144.770) layer=pieces(10) z=56
  90: sprite asset="pieces/black-knight" rect=[origin=(204.600, 126.020) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(223.350, 144.770) layer=pieces(10) z=57
  91: sprite asset="pieces/black-bishop" rect=[origin=(243.260, 126.020) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(262.010, 144.770) layer=pieces(10) z=58
  92: sprite asset="pieces/black-queen" rect=[origin=(281.920, 126.020) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(300.670, 144.770) layer=pieces(10) z=59
  93: sprite asset="pieces/black-king" rect=[origin=(320.580, 126.020) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(339.330, 144.770) layer=pieces(10) z=60
  94: sprite asset="pieces/black-bishop" rect=[origin=(359.240, 126.020) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(377.990, 144.770) layer=pieces(10) z=61
  95: sprite asset="pieces/black-knight" rect=[origin=(397.900, 126.020) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(416.650, 144.770) layer=pieces(10) z=62
  96: sprite asset="pieces/black-rook" rect=[origin=(436.560, 126.020) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(455.310, 144.770) layer=pieces(10) z=63
  97: sprite asset="pieces/white-pawn" rect=[origin=(320.580, 329.473) size=(37.500, 37.500)] tint=#ffffffff rotation=0.000 pivot=(339.330, 348.223) layer=pieces(10) z=100
  98: rect [origin=(320.000, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=none border=[width=7.000 color=#fffbffff] layer=overlay(20) z=-1
  99: rect [origin=(320.000, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=none border=[width=7.000 color=#fffbffff] layer=overlay(20) z=-1
  100: rect [origin=(320.000, 357.400) size=(38.660, 38.660)] radii=uniform(0.000) fill=none border=[width=3.000 color=#b07000ff] layer=overlay(20) z=0
  101: rect [origin=(320.000, 280.080) size=(38.660, 38.660)] radii=uniform(0.000) fill=none border=[width=3.000 color=#b07000ff] layer=overlay(20) z=0
  102: text "Chess" at=(16.000, 16.000) style=DisplaySm align=Start max_width=608.000 color=#193a3eff layer=hud(30) z=0
  103: text "a" at=(180.824, 435.720) style=LabelSm align=Start max_width=38.660 color=#f7f1e4ff layer=hud(30) z=0
  104: text "8" at=(151.360, 138.971) style=LabelSm align=Start max_width=18.000 color=#f7f1e4ff layer=hud(30) z=0
  105: text "b" at=(219.484, 435.720) style=LabelSm align=Start max_width=38.660 color=#f7f1e4ff layer=hud(30) z=0
  106: text "7" at=(151.360, 177.631) style=LabelSm align=Start max_width=18.000 color=#f7f1e4ff layer=hud(30) z=0
  107: text "c" at=(258.144, 435.720) style=LabelSm align=Start max_width=38.660 color=#f7f1e4ff layer=hud(30) z=0
  108: text "6" at=(151.360, 216.291) style=LabelSm align=Start max_width=18.000 color=#f7f1e4ff layer=hud(30) z=0
  109: text "d" at=(296.804, 435.720) style=LabelSm align=Start max_width=38.660 color=#f7f1e4ff layer=hud(30) z=0
  110: text "5" at=(151.360, 254.951) style=LabelSm align=Start max_width=18.000 color=#f7f1e4ff layer=hud(30) z=0
  111: text "e" at=(335.464, 435.720) style=LabelSm align=Start max_width=38.660 color=#f7f1e4ff layer=hud(30) z=0
  112: text "4" at=(151.360, 293.611) style=LabelSm align=Start max_width=18.000 color=#f7f1e4ff layer=hud(30) z=0
  113: text "f" at=(374.124, 435.720) style=LabelSm align=Start max_width=38.660 color=#f7f1e4ff layer=hud(30) z=0
  114: text "3" at=(151.360, 332.271) style=LabelSm align=Start max_width=18.000 color=#f7f1e4ff layer=hud(30) z=0
  115: text "g" at=(412.784, 435.720) style=LabelSm align=Start max_width=38.660 color=#f7f1e4ff layer=hud(30) z=0
  116: text "2" at=(151.360, 370.931) style=LabelSm align=Start max_width=18.000 color=#f7f1e4ff layer=hud(30) z=0
  117: text "h" at=(451.444, 435.720) style=LabelSm align=Start max_width=38.660 color=#f7f1e4ff layer=hud(30) z=0
  118: text "1" at=(151.360, 409.591) style=LabelSm align=Start max_width=18.000 color=#f7f1e4ff layer=hud(30) z=0
  119: rect [origin=(165.360, 59.520) size=(309.280, 44.800)] radii=uniform(14.000) fill=solid(#fefbf4ff) border=none layer=hud(30) z=0
  120: rect [origin=(165.360, 455.840) size=(309.280, 44.800)] radii=uniform(14.000) fill=solid(#e7e8dbff) border=none layer=hud(30) z=0
  121: rect [origin=(16.000, 554.880) size=(608.000, 64.000)] radii=uniform(16.000) fill=solid(#fefbf4ff) border=none layer=hud(30) z=0
  122: rect [origin=(16.000, 505.760) size=(200.000, 44.000)] radii=uniform(14.000) fill=solid(#eae3edff) border=none layer=hud(30) z=0
  123: text "Flip" at=(116.000, 517.760) style=LabelLg align=Center max_width=184.000 color=#1e1c21ff layer=hud(30) z=0
  124: push-opacity opacity=0.120 layer=hud(30) z=0
  125: rect [origin=(220.000, 505.760) size=(200.000, 44.000)] radii=uniform(14.000) fill=solid(#1e1c21ff) border=none layer=hud(30) z=0
  126: pop-opacity layer=hud(30) z=0
  127: push-opacity opacity=0.380 layer=hud(30) z=0
  128: text "Draw" at=(320.000, 517.760) style=LabelLg align=Center max_width=184.000 color=#1e1c21ff layer=hud(30) z=0
  129: pop-opacity layer=hud(30) z=0
  130: rect [origin=(424.000, 505.760) size=(200.000, 44.000)] radii=uniform(14.000) fill=solid(#eae3edff) border=none layer=hud(30) z=0
  131: text "Resign" at=(524.000, 517.760) style=LabelLg align=Center max_width=184.000 color=#1e1c21ff layer=hud(30) z=0
  132: sprite asset="pieces/black-king" rect=[origin=(171.852, 66.012) size=(31.816, 31.816)] tint=#ffffffff rotation=0.000 pivot=(187.760, 81.920) layer=hud(30) z=1
  133: text "Black / turn" at=(214.160, 63.520) style=LabelSm align=Start max_width=172.480 color=#193a3eff layer=hud(30) z=1
  134: text "Local player" at=(214.160, 84.520) style=LabelSm align=Start max_width=172.480 color=#526662ff layer=hud(30) z=1
  135: sprite asset="pieces/white-king" rect=[origin=(171.852, 462.332) size=(31.816, 31.816)] tint=#ffffffff rotation=0.000 pivot=(187.760, 478.240) layer=hud(30) z=1
  136: text "White" at=(214.160, 459.840) style=LabelSm align=Start max_width=172.480 color=#193a3eff layer=hud(30) z=1
  137: text "Local player" at=(214.160, 480.840) style=LabelSm align=Start max_width=172.480 color=#526662ff layer=hud(30) z=1
  138: text "Black to move" at=(28.000, 566.880) style=TitleSm align=Start max_width=584.000 color=#193a3eff layer=hud(30) z=1
  139: text "Draw offer: choose the last mover" at=(28.000, 594.880) style=BodySm align=Start max_width=584.000 color=#526662ff layer=hud(30) z=1
